--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "debug": "~2.2.0",
     "express": "~4.14.0",
     "jade": "~1.11.0",
+    "lodash": "^4.16.6",
     "morgan": "~1.7.0",
+    "request": "^2.78.0",
     "serve-favicon": "~2.3.0",
     "tingodb": "^0.4.2",
     "uuid": "^2.0.3"
